--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   # Google map
   google_maps_flutter: ^2.5.3
+  custom_info_window: ^1.0.1
 
   # Location
   geocoding: ^3.0.0
@@ -62,20 +63,22 @@ dependencies:
   retrofit: ^4.0.3
   dio: ^5.3.4
   pretty_dio_logger: ^1.3.1
-  json_annotation: ^4.4.0
-  json_serializable: ^6.1.1
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
   either_dart: ^1.0.0
 
   # UI
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^2.0.9
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   skeletons: ^0.0.3
   flutter_spinkit: ^5.2.0
   pull_to_refresh: ^2.0.0
+  shimmer: ^3.0.0
 
   #image
   cached_network_image: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
@@ -137,3 +140,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_gen:
+  integrations:
+    flutter_svg: true
